...
            .labelsHidden()
            .pickerStyle(.inline)
            .onChange(of: minutes, debounceTime: 0.5) { _ in
                validateValue()
            }
            .frame(width: proxy.size.width / 3.5, height: proxy.size.height / 2)
            .accessibilityIdentifier("Preferences_Duration_MinutePicker")

            Text(":")
                .frame(width: 5)

            Picker("Seconds", selection: $seconds) {
                ForEach(secondOptions, id: \.self) { value in
...
            .labelsHidden()
            .pickerStyle(.inline)
            .onChange(of: seconds, debounceTime: 0.5) { _ in
                validateValue()
            }
            .frame(width: proxy.size.width / 3.5, height: proxy.size.height / 2)
            .accessibilityIdentifier("Preferences_Duration_SecondPicker")

            Spacer()
        }
    }

    // MARK: Private Methods
...
