...
                        Image(systemName: "xmark")
                            .fontWeight(.semibold)
                            .font(.title2)
                            .foregroundStyle(Color(.end))
                    }
                    .buttonStyle(.workoutControl(color: Color(.endBackground)))
                    .accessibilityIdentifier("WorkoutControl_EndButton")

                    Text(L10n.General.Button.end)
                        .bellFont(.caption)
                }

                VStack {
...
                        Image(systemName: viewModel.isWorkoutPaused ? "arrow.clockwise" : "pause")
                            .fontWeight(.semibold)
                            .font(.title2)
                            .foregroundStyle(Color(.pause))
                    }
                    .buttonStyle(.workoutControl(color: Color(.pauseBackground)))
                    .accessibilityIdentifier("WorkoutControl_PauseResumeButton")

                    Text(
                        viewModel.isWorkoutPaused
                            ? L10n.General.Button.resume
                            : L10n.General.Button.pause
                    )
...
