...
                dateTime()

                Spacer()
                    .frame(height: 32)
            }
        }
        .accessibilityIdentifier("WorkoutSummary_ScrollView")
        .task { await viewModel.appear() }
        .toolbar {
            // TODO: Replace by proper sheet.
            ToolbarItem(placement: .cancellationAction) {
                Button {
                    Task { await viewModel.dismiss() }
                } label: {
                    Image(systemName: "xmark")
                }
                .accessibilityIdentifier("WorkoutSummary_DoneButton")
            }
        }
    }

    // MARK: Private Methods
    @ViewBuilder
...
