...
                    .tag(0)
                WorkoutDashboardView()
                    .tag(1)
                NowPlayingView()
                    .tag(2)
            }
            .accessibilityIdentifier("Workout_TabView")
        }
    }

    @ViewBuilder
    private func countdown() -> some View {
        if viewModel.currentScene == .countdown {
...
